--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,15 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
 
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install and Build 🔧
         run: |
-          npm ci
+          npm install
           npm run build
 
       - name: Deploy 🚀
