--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,13 +8,12 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with: 
+          node-version: 20
 
       - name: Install and Build 🔧
         run: |
