--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          npm install
+          npm audit fix --force
           npm run build
 
       - name: Deploy 🚀
